syntax = "proto3";

package protobuff;

import "entity.proto";

message TaskPb {
  EntityPb dbInfo = 1;
}
